// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupList renders empty list 1`] = `
<Screen
  drawUnderNavBar={false}
  title="Red Squadron"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <list>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "height": 100,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          No results
        </Text>
      </View>
    </list>
  </View>
</Screen>
`;

exports[`GroupList renders properly 1`] = `
<Screen
  drawUnderNavBar={false}
  title="Red Squadron"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <list>
      <item>
        <View
          accessibilityTraits={Array []}
          onPress={[Function]}
          style={
            Array [
              Object {
                "borderTopColor": "#C7CDD1",
                "borderTopWidth": 0.5,
              },
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
              },
            ]
          }
          testID="1"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "minHeight": 54,
                  "paddingBottom": 12,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 12,
                },
                Object {
                  "backgroundColor": "#FFFFFF",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "height": 40,
                  "marginRight": 16,
                  "width": 40,
                }
              }
            >
              <TouchableHighlight
                accessibilityLabel="Donald Trump Profile"
                accessibilityTraits="button"
                activeOpacity={0.85}
                delayPressOut={100}
                onPress={[Function]}
                underlayColor="transparent"
              >
                <View
                  accessibilityLabel=""
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      Object {
                        "backgroundColor": "#F5F5F5",
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                >
                  <Image
                    source={
                      Object {
                        "uri": "http://www.fillmurray.com/100/100",
                      }
                    }
                    style={
                      Object {
                        "height": 40,
                        "width": 40,
                      }
                    }
                  />
                </View>
              </TouchableHighlight>
            </View>
            <View
              style={
                Array [
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "center",
                  },
                  Object {
                    "marginLeft": 12,
                  },
                ]
              }
            >
              <Text
                ellipsizeMode="tail"
                numberOfLines={0}
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontWeight": "600",
                      },
                    ],
                  ]
                }
              >
                Donald Trump
              </Text>
            </View>
          </View>
        </View>
      </item>
    </list>
  </View>
</Screen>
`;

exports[`GroupList renders without a group 1`] = `
<Screen
  drawUnderNavBar={false}
  title=""
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <list>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "height": 100,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          No results
        </Text>
      </View>
    </list>
  </View>
</Screen>
`;
